# auto_config_parser

./: .gitignore  README.md  pyproject.toml
auto_config_parser/: __init__.py  auto_config_parser.py
tests/: test_auto_reload.py
