[project]
name = "auto_config_parser"
dependencies = [
    "watchdog>=3.0"
]
version = "0.1.0"
description = "Drop-in replacement for configparser.ConfigParser that automatically reloads the configuration file when it changes on disk"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Ryan Hayward", email = "rhhayward@att.com" }
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/rhhayward/auto_config_parser"

[project.optional-dependencies]
test = ["pytest >=7.0"]

[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
